# pdfpeek

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
pdf_engine/: __init__.py  __main__.py  api.py  cli.py  models.py  stage0_triage.py  stage1_extraction.py  stage2_layout.py  stage3_reading_order.py  stage4_tables.py  stage5_ocr.py  stage6_assembly.py  stage7_crosspage.py  stage8_postprocessing.py  stage9_confidence.py  surya_adapter.py
tests/: test_integration.py  test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py  test_stage8.py  test_stage9.py
